--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,6 @@ body{
     margin: 0;
     padding: 0;
     font-family: Verdana;
-    background: #fff;
-    overflow: hidden;
 }
 .sidebar{
     position: fixed;
@@ -14,7 +12,6 @@ body{
     width: 250px;
     height: 100%;
     transition: .3s;
-
 }
 .active{
     left: 0px;
@@ -40,7 +37,7 @@ ul li a:hover{
     background: #fff;
     color: #000;
     opacity: 0.8;
-
+    text-decoration: none;
 }
 
 .sidebarBtn{
@@ -99,4 +96,15 @@ ul li a:hover{
 .sidebarBtn.toggle span:after{
     top: 0;
     transform: rotate(-45deg);
+}
+
+
+.parallax-window {
+    min-height: 1100px;
+    background: transparent;
+}
+
+.parallax-window2{
+    min-height: 500px;
+    background: transparent;
 }
