--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ ul li a{
 }
 ul li a:hover{
     transition: .5s;
-    background: #fff;
+    background: #f5f5f5;
     color: #000;
     opacity: 0.8;
     text-decoration: none;
@@ -48,8 +48,12 @@ ul li a:hover{
     height: 50px;
     box-sizing: border-box;
     cursor: pointer;
-    background: #f5f5f5;
+    background: #262626;
     border: none;
+    outline: none;
+
+}
+.sidebarBtn:focus{
     outline: none;
 }
 
@@ -58,7 +62,7 @@ ul li a:hover{
     display: block;
     width: 38px;
     height: 3px;
-    background: #262626;
+    background: #f5f5f5;
     position: absolute;
     top: 24px;
     transition: .3s;
@@ -70,7 +74,7 @@ ul li a:hover{
     left: 0;
     width: 100%;
     height: 3px;
-    background: #262626;
+    background: #f5f5f5;
     transition: .3s;
 }
 .sidebarBtn span:after{
@@ -80,7 +84,7 @@ ul li a:hover{
     left: 0;
     width: 100%;
     height: 3px;
-    background: #262626;
+    background: #f5f5f5;
     transition: .3s;
 }
 
@@ -100,7 +104,7 @@ ul li a:hover{
 
 
 .parallax-window {
-    min-height: 1100px;
+    min-height: 800px;
     background: transparent;
 }
 
