--- a/css/style.css
+++ b/css/style.css
@@ -477,3 +477,90 @@ footer{
     width: 250px;
     size: 3px;
 }
+
+.post .imgBx{
+    height: 200px;
+}
+
+.contact .container{
+    padding: 20px;
+    color: black;
+}
+
+.contact .form-control{
+    height: 40px;
+    border: 1px solid #fff;
+}
+
+.btnD1{
+    padding: 10px 40px;
+    margin-top: 10px;
+
+}
+contact label {
+    color: #000000;
+    font-size: 1.25rem;
+}
+/* Neao Header*/
+.neon {
+    position: absolute;
+    overflow: hidden;
+    filter:brightness(200%);
+}
+
+.text {
+    background-color: black;
+    color:white;
+    font-size: 110px;
+    font-weight: bold;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    position: relative;
+}
+
+.text:before {
+    content: attr(data-text);
+    position: absolute;
+    color:white;
+    filter: blur(0.015em);
+    mix-blend-mode: difference;
+}
+
+.gradient{
+    position: absolute;
+    background: linear-gradient(45deg, #07EFEB, #1EC4DC, #369ACD, #4D6FBE, #6644AF);
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    mix-blend-mode: multiply;
+}
+
+
+.spotlight {
+    position: absolute;
+    top: -100%;
+    left: -100%;
+    right: 0;
+    bottom: 0;
+    background:
+            radial-gradient(
+                    circle,
+                    white,
+                    transparent 25%
+            ) center / 25% 25%,
+            radial-gradient(
+                    circle,
+                    white,
+                    black 25%
+            ) center / 12.5% 12.5%;
+    animation: light 10s linear infinite;
+    mix-blend-mode: color-dodge;
+}
+
+@keyframes light {
+    to {
+        transform: translate(50%, 50%);
+    }
+
+}
