--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: Verdana;
+    font-family: Verdana, sans-serif;
 }
 .sidebar{
     position: fixed;
@@ -12,6 +12,7 @@ body{
     width: 250px;
     height: 100%;
     transition: .3s;
+    z-index: 1;
 }
 .active{
     left: 0px;
@@ -301,14 +302,14 @@ ul li a:hover{
     height: 50px;
     border-radius: 0;
     background: rgba(0,0,0,.6);
-    color: #fff;
+    color: #000000;
     font-size: 1.25rem;
 }
 .contact .form-control:hover,
 .contact .form-control:focus{
     background: transparent;
     background: rgba(0,0,0,.6);
-    color: #fff;
+    color: #000;
     box-shadow: none;
 }
 
@@ -317,7 +318,7 @@ ul li a:hover{
 }
 
 .contact label{
-    color: #fff;
+    color: #000;
     font-size: 1.25rem;
 }
 
@@ -500,67 +501,4 @@ footer{
 contact label {
     color: #000000;
     font-size: 1.25rem;
-}
-/* Neao Header*/
-.neon {
-    position: absolute;
-    overflow: hidden;
-    filter:brightness(200%);
-}
-
-.text {
-    background-color: black;
-    color:white;
-    font-size: 110px;
-    font-weight: bold;
-    font-family: sans-serif;
-    text-transform: uppercase;
-    position: relative;
-}
-
-.text:before {
-    content: attr(data-text);
-    position: absolute;
-    color:white;
-    filter: blur(0.015em);
-    mix-blend-mode: difference;
-}
-
-.gradient{
-    position: absolute;
-    background: linear-gradient(45deg, #07EFEB, #1EC4DC, #369ACD, #4D6FBE, #6644AF);
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    mix-blend-mode: multiply;
-}
-
-
-.spotlight {
-    position: absolute;
-    top: -100%;
-    left: -100%;
-    right: 0;
-    bottom: 0;
-    background:
-            radial-gradient(
-                    circle,
-                    white,
-                    transparent 25%
-            ) center / 25% 25%,
-            radial-gradient(
-                    circle,
-                    white,
-                    black 25%
-            ) center / 12.5% 12.5%;
-    animation: light 10s linear infinite;
-    mix-blend-mode: color-dodge;
-}
-
-@keyframes light {
-    to {
-        transform: translate(50%, 50%);
-    }
-
 }
