--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ ul li a{
     display: block;
     text-decoration: none;
     border-bottom: 1px solid rgba(0,0,0,.2);
+    outline: none;
 }
 ul li a:hover{
     transition: .5s;
@@ -39,6 +40,10 @@ ul li a:hover{
     color: #000;
     opacity: 0.8;
     text-decoration: none;
+    outline: none;
+}
+ul li a:focus{
+    outline: none;
 }
 
 .sidebarBtn{
