--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: Verdana, sans-serif;
-    background-color: #1b1e21;
-    color: #fff;
+
 }
 .sidebar{
     position: fixed;
@@ -111,13 +110,9 @@ ul li a:focus{
 
 .parallax-window {
     background: transparent;
-    size: auto;
+    min-height: 600px;
 }
 
-.parallax-window2{
-    margin-top: 30px;
-    background: transparent;
-}
 
 
 @media (max-width: 376px) {
@@ -125,12 +120,7 @@ ul li a:focus{
         min-height: 300px;
         background: transparent;
     }
-    .parallax-window2{
-        margin-top: 30px;
-        min-width: 200px;
-        min-height: 400px;
-        background: transparent;
-    }
+
 
 }
 
@@ -256,8 +246,8 @@ ul li a:focus{
 
 .btnD1{
     border: 2px solid #fff;
-    color: #000;
-    background: #fff;
+    color: #fff;
+    background: #000;
     border-radius: 50px;
     padding: 12px 40px;
     font-size: 1.15rem;
@@ -375,24 +365,10 @@ footer{
 .cprty a:hover{
     color: #fff;
 }
-@media (min-width: 992px) {
-    .navbar-expand-lg .navbar-nav .nav-link {
-        padding-right: 1rem;
-        padding-left: 1rem;
-    }
-}
+
 
 @media (max-width: 992px){
-    .navbar .navbar-toggler{
-        border: none;
 
-    }
-    .navbar .navbar-toggler:focus{
-        border: none;
-        outline: none;
-        color: black;
-        transition: .5s;
-    }
     .banner{
         min-height: 100vh;
         padding: 100px 0;
@@ -400,16 +376,6 @@ footer{
     .sec1 h2,
     .contentBox h1{
         font-size: 2rem;
-    }
-    .navbar .navbar-brand{
-        font-size: 2rem;
-    }
-    .navbar .navbar-brand:hover{
-        font-size: 2rem;
-    }
-    .navbar-expand-lg .navbar-nav .nav-link {
-        padding-right: 1rem;
-        padding-left: 1rem;
     }
 
     sec1{
@@ -484,6 +450,7 @@ footer{
 .hr1{
     width: 250px;
     size: 3px;
+    color: #fff;
 }
 
 .post .imgBx{
@@ -492,7 +459,7 @@ footer{
 
 .contact .container{
     padding: 20px;
-    color: black;
+    color: #fff;
 }
 
 .contact .form-control{
@@ -506,7 +473,7 @@ footer{
 
 }
 contact label {
-    color: #000000;
+    color: #fff;
     font-size: 1.25rem;
 }
 hr{
@@ -514,39 +481,3 @@ hr{
 }
 
 /* */
-glow {
-    margin-top: 100px;
-    text-align: center;
-span {
-    color: $light;
-    text-shadow:
-    0 0 2px $light,
-    0 0 10px $light,
-    0 0 20px $glow,
-    0 0 30px $glow,
-    0 0 40px $glow,
-    0 0 50px $glow;
-    animation: blink 1.5s infinite alternate;
-}
-.major {
-    display: block;
-    font-size: $fs;
-}
-.minor {
-    display: block;
-    font-size: $fs/10*6;
-}
-}
-
-@keyframes blink {
-    0%   {}
-    100% {
-        text-shadow:
-        0 0 2px $light,
-        0 0 10px $light,
-        0 0 20px $light,
-        0 0 40px $glow,
-        0 0 70px $glow,
-        0 0 80px $glow;
-    }
-}
