--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
     position: fixed;
     top: 0;
     left: -250px;
-    background: #262626;
+    background: #000;
     opacity: 0.7;
     width: 250px;
     height: 100%;
@@ -55,7 +55,7 @@ ul li a:focus{
     height: 50px;
     box-sizing: border-box;
     cursor: pointer;
-    background: #262626;
+    background: #000;
     border: none;
     outline: none;
 
@@ -257,6 +257,10 @@ ul li a:focus{
     margin-bottom: 20px;
 
 }
+.btnD1:hover{
+    background: #262626;
+    transition: 0.7s;
+}
 
 .post{
     position: relative;
@@ -298,14 +302,14 @@ ul li a:focus{
     border-bottom: 2px solid rgba(255,255,255,.2);
     height: 50px;
     border-radius: 0;
-    background: rgba(0,0,0,.6);
+    background: lightgrey;
     color: #000000;
     font-size: 1.25rem;
 }
 .contact .form-control:hover,
 .contact .form-control:focus{
     background: transparent;
-    background: rgba(0,0,0,.6);
+    background: lightgray;
     color: #000;
     box-shadow: none;
 }
