--- a/css/style.css
+++ b/css/style.css
@@ -108,16 +108,22 @@ ul li a:focus{
 }
 
 .parallax-window {
-    background: transparent;
     min-height: 700px;
 }
 
 
 
-@media (max-width: 376px) {
+@media (max-width: 415px) {
     .parallax-window {
         min-height: 300px;
-        background: transparent;
+    }
+    .fly-in-text li {
+        display: inline-block;
+        margin-right: 10px;
+        font-size: 5em;
+        color: #fff;
+        opacity: 1;
+        transition: all 3s ease;
     }
 
 
@@ -257,8 +263,9 @@ ul li a:focus{
 
 }
 .btnD1:hover{
-    background: #262626;
+    background: lavender;
     transition: 0.7s;
+    color: black;
 }
 
 .post{
@@ -502,6 +509,7 @@ hr{
 }
 
 .welcome-section{
+    z-index: 1;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -525,14 +533,14 @@ hr{
 
 .fly-in-text li {
     display: inline-block;
-    margin-right: 20px;
-    font-size: 5em;
+    margin-right: 10px;
+    font-size: 2em;
     color: #fff;
     opacity: 1;
     transition: all 3s ease;
 }
 
-.fly-in-text li:nth-child(11){
+.fly-in-text li:nth-child(13){
     margin-right: 0;
 }
 
@@ -546,19 +554,26 @@ hr{
     margin-top: 30px;
     transition: all 1s ease 3s;
 }
+.enter-button:hover{
+    text-decoration: none;
+    color: #fff;
+    opacity: 1;
+}
 
 .content-hidden .fly-in-text li{
     opacity: 0;
 }
-.content-hidden .fly-in-text li:nth-child(1){transform: translate3d(-90px, 0, 0);}
-.content-hidden .fly-in-text li:nth-child(2){transform: translate3d(-70px, 0, 0);}
-.content-hidden .fly-in-text li:nth-child(3){transform: translate3d(-50px, 0, 0);}
-.content-hidden .fly-in-text li:nth-child(4){transform: translate3d(-30px, 0, 0);}
-.content-hidden .fly-in-text li:nth-child(5){transform: translate3d(-10px, 0, 0);}
-.content-hidden .fly-in-text li:nth-child(6){transform: translate3d( 0px, 0, 0);}
-.content-hidden .fly-in-text li:nth-child(7){transform: translate3d(10px, 0, 0);}
-.content-hidden .fly-in-text li:nth-child(8){transform: translate3d(30px, 0, 0);}
-.content-hidden .fly-in-text li:nth-child(9){transform: translate3d(50px, 0, 0);}
-.content-hidden .fly-in-text li:nth-child(10){transform: translate3d(70px, 0, 0);}
-.content-hidden .fly-in-text li:nth-child(11){transform: translate3d(90px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(1){transform: translate3d(-110px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(2){transform: translate3d(-90px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(3){transform: translate3d(-70px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(4){transform: translate3d(-50px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(5){transform: translate3d(-30px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(6){transform: translate3d(-10px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(7){transform: translate3d(0px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(8){transform: translate3d(10px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(9){transform: translate3d(30px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(10){transform: translate3d(50px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(11){transform: translate3d(70px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(12){transform: translate3d(90px, 0, 0);}
+.content-hidden .fly-in-text li:nth-child(13){transform: translate3d(110px, 0, 0);}
 .content-hidden .enter-button {opacity: 0; transform: translate3d(0, -30px, 0)}
