--- a/css/style.css
+++ b/css/style.css
@@ -107,12 +107,16 @@ ul li a:focus{
     transform: rotate(-45deg);
 }
 
+.parallax-window {
+    min-height: 700px;
+}
 
 
 
-
-@media (max-width: 376px) {
-
+@media (max-width: 476px) {
+    .parallax-window {
+        min-height: 300px;
+    }
     .fly-in-text li {
         display: inline-block;
         margin-right: 10px;
@@ -575,17 +579,3 @@ hr{
 .content-hidden .enter-button {opacity: 0; transform: translate3d(0, -30px, 0)}
 
 
-#first{
-    width: 100%;
-    height: 250px;
-    overflow: hidden;
-    position: relative;
-}
-
-#first img{
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%);
-}
