--- a/css/style.css
+++ b/css/style.css
@@ -527,11 +527,11 @@ hr{
 
 .fly-in-text li {
     display: inline-block;
-
+    overflow: auto;
     font-size: 1em;
     color: #fff;
     opacity: 1;
-    transition: all 3s ease;
+    transition: all 4s ease;
 }
 
 .fly-in-text li:nth-child(13){
