--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: Verdana, sans-serif;
+    font-family: 'Playfair Display', serif;
+    background-color: black;
+    color: white;
 }
+
 .sidebar{
     position: fixed;
     top: 0;
@@ -14,6 +17,7 @@ body{
     transition: .3s;
     z-index: 1;
 }
+
 .active{
     left: 0px;
 }
@@ -26,6 +30,7 @@ ul{
 ul li{
     list-style: none;
 }
+
 ul li a{
     padding: 20px 30px;
     color: #fff;
@@ -34,6 +39,7 @@ ul li a{
     border-bottom: 1px solid rgba(0,0,0,.2);
     outline: none;
 }
+
 ul li a:hover{
     transition: .5s;
     background: #f5f5f5;
@@ -42,6 +48,7 @@ ul li a:hover{
     text-decoration: none;
     outline: none;
 }
+
 ul li a:focus{
     outline: none;
 }
@@ -57,14 +64,13 @@ ul li a:focus{
     background: #000;
     border: none;
     outline: none;
-
 }
+
 .sidebarBtn:focus{
     outline: none;
 }
 
 .sidebarBtn span{
-
     display: block;
     width: 33px;
     height: 3px;
@@ -73,6 +79,7 @@ ul li a:focus{
     top: 24px;
     transition: .3s;
 }
+
 .sidebarBtn span:before{
     content: '';
     position: absolute;
@@ -83,6 +90,7 @@ ul li a:focus{
     background: #f5f5f5;
     transition: .3s;
 }
+
 .sidebarBtn span:after{
     content: '';
     position: absolute;
@@ -102,6 +110,7 @@ ul li a:focus{
     top: 0;
     transform: rotate(45deg);
 }
+
 .sidebarBtn.toggle span:after{
     top: 0;
     transform: rotate(-45deg);
@@ -113,14 +122,17 @@ ul li a:focus{
 }
 
 
-
 @media (max-width: 476px) {
     .parallax-window {
         min-height: 550px;
     }
+    .video{
 
-
-
+    }
+    .video-background{
+        width: 100%;
+        top: 0;
+    }
 }
 
 
@@ -139,7 +151,6 @@ ul li a:focus{
     color: #fff;
     font-size: 4.5rem;
     opacity: 0.6;
-
 }
 
 
@@ -156,7 +167,6 @@ ul li a:focus{
 }
 
 .sec1{
-
     background: #000;
 }
 
@@ -178,7 +188,6 @@ ul li a:focus{
     margin: 0 auto;
     background: #000;
     margin-top: 30px;
-
 }
 
 .placeBox .imgBx{
@@ -213,7 +222,6 @@ ul li a:focus{
     font-weight: 600;
     width: 100%;
     text-align: center;
-
 }
 
 .placeBox .content h3 span{
@@ -240,7 +248,6 @@ ul li a:focus{
     vertical-align: center;
     font-family: 'Open Sans', sans-serif;
     opacity: 0.8;
-
 }
 
 .btnD1{
@@ -302,7 +309,7 @@ ul li a:focus{
     border-bottom: 2px solid rgba(255,255,255,.2);
     height: 50px;
     border-radius: 0;
-    background: lightgrey;
+    background: lightyellow;
     color: #000000;
     font-size: 1.25rem;
 }
@@ -480,6 +487,7 @@ contact label {
     color: #fff;
     font-size: 1.25rem;
 }
+
 hr{
     color: #fff;
 }
@@ -498,8 +506,6 @@ hr{
     transform: translate(-50%, -50%);
     font-weight: lighter;
     font-size: 40px;
-
-
 }
 
 .welcome-section{
@@ -518,6 +524,11 @@ hr{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    color: gold;
+}
+
+.content-wrap a{
+    color:gold;
 }
 
 .fly-in-text{
@@ -543,11 +554,12 @@ hr{
     text-align: center;
     font-size: 1em;
     text-decoration: none;
-    color: #fff;
+    color: gold;
     opacity: 1;
     margin-top: 30px;
     transition: all 1s ease 3s;
 }
+
 .enter-button:hover{
     text-decoration: none;
     color: #000;
@@ -556,6 +568,7 @@ hr{
 .content-hidden .fly-in-text li{
     opacity: 0;
 }
+
 .content-hidden .fly-in-text li:nth-child(1){transform: translate3d(-110px, 0, 0);}
 .content-hidden .fly-in-text li:nth-child(2){transform: translate3d(-90px, 0, 0);}
 .content-hidden .fly-in-text li:nth-child(3){transform: translate3d(-70px, 0, 0);}
@@ -571,4 +584,12 @@ hr{
 .content-hidden .fly-in-text li:nth-child(13){transform: translate3d(110px, 0, 0);}
 .content-hidden .enter-button {opacity: 0; transform: translate3d(0, -30px, 0)}
 
-
+.video{
+    height: 100vh;
+    position: relative;
+}
+.video-background{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
