--- a/css/style.css
+++ b/css/style.css
@@ -126,8 +126,8 @@ ul li a:focus{
 
 
     .video-background{
-        height: 300px;
-        width: auto;
+        width: 100%;
+        overflow: hidden;
     }
 }
 
