--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Libre Baskerville', serif;
     background-color: black;
     color: white;
 }
@@ -520,7 +520,7 @@ hr{
 }
 
 .content-wrap a{
-    color:#fff;
+    color: yellow;
 }
 
 .fly-in-text{
@@ -546,8 +546,7 @@ hr{
     text-align: center;
     font-size: 1em;
     text-decoration: none;
-    color: #fff;
-    opacity: 0.7;
+    opacity: 0.8;
     margin-top: 30px;
     transition: all 1s ease 3s;
 }
